--- a/src/component/Course/Course.css
+++ b/src/component/Course/Course.css
@@ -4,7 +4,7 @@
     border-radius: 20px;
     height: auto;
     position: relative;
-    height: 500px;
+    height: 550px;
 
     padding: 10px;
     box-shadow: 10px 10px 5px 2px rgba(29, 65, 77, 0.581);
@@ -39,20 +39,7 @@
 
 }
 
-.btn-already-select {
-    background-color: rgba(9, 9, 51, 0.311);
-    width: 100%;
-    height: 50px;
-    border-radius: 20px;
 
-    font-size: 20px;
-    font-weight: bolder;
-    color: white;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    cursor: pointer;
-}
 
 .btn-select:hover {
 
@@ -61,3 +48,15 @@
 
 
 }
+
+/* @media only screen and (max-width: 640px) {
+    .course-card {
+        height: 550px;
+    }
+}
+
+@media (min-width: 641px) and (max-width: 1024px) {
+    .course-card {
+        height: 550px;
+    }
+} */
